Fix iOS6 form overflow issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -192,6 +192,7 @@ h1 a {
 }
 form {
 	padding:50px 0 0;
+	overflow:hidden;
 }
 label, [type=text] {
 	width:100%;
